Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26260

TextInput doesn't re-validate input when validator arguments change.

    XMLWordPrintable

Details

    Description

      If a property of a TextInput validator changes after the validator has been assigned and the TextInput has been completed a binding to TextInput.acceptableInput will have the wrong value if the validity of the input is changed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes